# python-telnetserver

./: .gitignore  MANIFEST  README.md  how_to_update.md  pyproject.toml  setup.py
examples/: echo_telnet_server.py
telnetserver/: __init__.py  telnetserver.py
